--- a/.github/workflows/Host.yml
+++ b/.github/workflows/Host.yml
@@ -20,7 +20,7 @@ jobs:
     # The type of runner that the job will run on
     runs-on: 
       - self-hosted
-      - label-2
+      - gh-msl02
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -34,4 +34,4 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          C:\Users\nagarjuna\Desktop\AT.bat
+          E:\AT.bat
